<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/curve2">
            <Button
                android:id="@+id/back2_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableLeft="@drawable/ic_back"
                android:background="#94166A"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign"
                android:textAllCaps="true"
                android:textColor="#fefefe"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="30sp"
                android:id="@+id/login_textView" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_textView"
                android:textColor="#B5FEFEFE"
                android:textSize="15sp"
                android:text="Customer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/name_editText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/email_login"
                android:hint="@string/email" />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/email_login"
                app:layout_constraintBottom_toTopOf="@id/password_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/name_editText"
                android:hint="@string/name" />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name_editText"
                app:layout_constraintBottom_toTopOf="@id/password_confirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/password_login"
                android:hint="@string/password" />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/password_login"
                app:layout_constraintBottom_toTopOf="@id/gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/password_confirm"
                android:hint="@string/confirm_password" />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/password_confirm"
                app:layout_constraintBottom_toTopOf="@id/gender_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/gender"
                android:hint="@string/gender" >

            </EditText>
            <RadioGroup
                android:id="@+id/gender_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/gender"
                app:layout_constraintBottom_toTopOf="@id/birthday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone">
                <RadioButton
                    android:id="@+id/btn1"
                    android:text="@string/male"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
                <RadioButton
                    android:id="@+id/btn2"
                    android:text="@string/female"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
            </RadioGroup>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/gender_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/birthday"
                android:hint="@string/college" />
            <Button
                android:id="@+id/sign_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/birthday"
                app:layout_constraintBottom_toTopOf="@id/or_textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/sign"
                android:background="@drawable/login_bg" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sign_button"
                app:layout_constraintBottom_toTopOf="@id/facebook_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/orsign"
                android:id="@+id/or_textView" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintTop_toBottomOf="@id/sign_button"
                app:layout_constraintBottom_toTopOf="@id/facebook_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/or_textView"
                android:text="@string/orlogin" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintTop_toBottomOf="@id/sign_button"
                app:layout_constraintBottom_toTopOf="@id/facebook_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/or_textView"
                android:text="@string/orlogin" />
            <Button
                android:text="Facebook"
                android:textColor="#fefefe"
                android:background="@drawable/facebook_bg"
                android:drawableLeft="@drawable/ic_facebook_app_symbol"
                android:id="@+id/facebook_image"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintWidth_percent="0.40"
                app:layout_constraintTop_toBottomOf="@id/or_textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/google_image" />
            <Button
                android:drawableLeft="@drawable/ic_google_plus"
                android:text="Google"
                android:textColor="#fefefe"
                android:background="@drawable/google_bg"
                android:id="@+id/google_image"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintWidth_percent="0.40"
                app:layout_constraintTop_toBottomOf="@id/or_textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/facebook_image"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>