<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/curve2">
            <Button
                android:id="@+id/back1_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableLeft="@drawable/ic_back"
                android:background="#94166A"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="#fefefe"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="30sp"
                android:id="@+id/login_textView" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_textView"
                android:textColor="#B5FEFEFE"
                android:textSize="15sp"
                android:text="Customer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/sign_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/email_login"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/email_login"
                app:layout_constraintBottom_toTopOf="@id/sign_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/password_login"
                android:hint="@string/password"
                android:inputType="textPassword"/>
            <Button
                android:id="@+id/sign_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/login"
                android:background="@drawable/login_bg" />
            <TextView
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sign_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/orlogin"
                android:id="@+id/or_textView" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintTop_toBottomOf="@id/sign_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/or_textView"
                android:text="@string/orlogin" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintTop_toBottomOf="@id/sign_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/or_textView"
                android:text="@string/orlogin" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sign_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/or_textView"
                android:text="@string/forget" />
            <Button
                android:text="Facebook"
                android:textColor="#fefefe"
                android:background="@drawable/facebook_bg"
                android:drawableLeft="@drawable/ic_facebook_app_symbol"
                android:id="@+id/facebook_image"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintWidth_percent="0.40"
                app:layout_constraintTop_toBottomOf="@id/or_textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/google_image"
                android:layout_marginBottom="30dp"/>
            <Button
                android:text="Google"
                android:textColor="#fefefe"
                android:background="@drawable/google_bg"
                android:drawableLeft="@drawable/ic_google_plus"
                android:id="@+id/google_image"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintWidth_percent="0.40"
                app:layout_constraintTop_toBottomOf="@id/or_textView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/facebook_image"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="30dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>